# promptimize

./: .env.sample  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: 01-basic-prompt-structures.ipynb  02-prompt-formatting-structures.ipynb
notebooks/dspy/: ner.ipynb  optimized_extractor.json
notebooks/prompting/: 01-basic-prompt-structures.ipynb  02-prompt-formatting-structures.ipynb  03-prompt-chaining-sequencing.ipynb  04-cot-prompting.ipynb  05-prompt-length-complexity-management.ipynb  06-evaluating-prompt-effectiveness.ipynb  07-structured-output.ipynb  README.md
scripts/: create_venv.sh
src/: structured_output.py
