[tool.poetry]
authors = ["tqtensor <victortang212@gmail.com>"]
description = "Prompt Optimization Workshop"
name = "vn-ds"
readme = "README.md"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
openai = "^1.59.7"
python = "^3.11"
langchain = "^0.2.17"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.25"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
toml-sort = "^0.23.1"
ipykernel = "^6.29.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
